(styling): fixed some spacing

--- a/src/scss/components/side_menu.scss
+++ b/src/scss/components/side_menu.scss
@@ -2,7 +2,7 @@
 
 .side-menu {
     --menu-width: 300px;
-    --container-margin: 0 0.5rem;
+    --container-margin: 1rem 0.5rem 0 0.5rem;
     position: absolute;
     top: 0;
     right: 100%;
@@ -184,38 +184,3 @@
         }
     }
 }
-
-
-// .select-btn-wrapper{
-//     height: 8vmin;
-//     width: 8vmin;
-//     @include flex(center, center, row);
-//     position: relative;
-//     background: #1b1b1b;
-//     border-radius: 50%;
-//     box-shadow: 0 3px 4px rgba(0,0,0,1),
-//                 inset 0 -2px 5px rgba(0,0,0,1),
-//                 inset 0 2px 2px rgba(255, 255, 255, 0.5),
-//                 0 0 0 2px #000,
-//                 0 0 0 5px #0c0c0c,
-//                 0 0 0 5.5px #080808;
-    
-//     .select-btn{
-//         appearance: none;
-//         height: 100%;
-//         width: 100%;
-//         position: absolute;
-//         cursor: pointer;
-//     }
-
-//     i{
-//         font-size: 4vmin;
-//         color: #0c0c0c;
-//     }
-
-//     .select-btn:checked ~ i{
-//         color: #00ffe7;
-//         text-shadow: 0 0 15px #00a1ff,
-//                      0 0 30px #00a1ff;
-//     }        
-// }
